--- a/notebooks/Store_Sales_Predction_Mod_10.1.ipynb
+++ b/notebooks/Store_Sales_Predction_Mod_10.1.ipynb
@@ -154,7 +154,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "jupyter_settings() "
@@ -1269,9 +1271,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "#  **3.0. FILTAGREM DE VARIAVEIS**"
    ]
@@ -1284,8 +1284,7 @@
      "end_time": "2020-07-15T11:54:14.537547Z",
      "start_time": "2020-07-15T11:54:14.223632Z"
     },
-    "code_folding": [],
-    "hidden": true
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -1295,9 +1294,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## **3.1. Filtragem de linha**"
    ]
@@ -1309,8 +1306,7 @@
     "ExecuteTime": {
      "end_time": "2020-07-15T11:54:14.711370Z",
      "start_time": "2020-07-15T11:54:14.547961Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -1320,9 +1316,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## 3.2. **Seleção das Colunas**"
    ]
@@ -1334,8 +1328,7 @@
     "ExecuteTime": {
      "end_time": "2020-07-15T11:54:14.809670Z",
      "start_time": "2020-07-15T11:54:14.720983Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -1352,8 +1345,7 @@
     "ExecuteTime": {
      "end_time": "2020-07-15T11:54:14.850813Z",
      "start_time": "2020-07-15T11:54:14.820177Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -1380,9 +1372,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# **4.0 ANALISE EXPLORATÓRIA DE DADOS**"
    ]
@@ -1394,8 +1384,7 @@
     "ExecuteTime": {
      "end_time": "2020-07-15T11:54:15.366069Z",
      "start_time": "2020-07-15T11:54:14.861165Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -1404,18 +1393,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## **4.1. Analise Univariada**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### **4.1.1. Variavel Resposta**"
    ]
@@ -1428,8 +1413,7 @@
      "end_time": "2020-07-15T11:54:18.948194Z",
      "start_time": "2020-07-15T11:54:15.370484Z"
     },
-    "code_folding": [],
-    "hidden": true
+    "code_folding": []
    },
    "outputs": [
     {
@@ -1456,9 +1440,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### **4.1.2. VARIÁVEIS NUMÉRICAS**"
    ]
@@ -1471,8 +1453,7 @@
      "end_time": "2020-07-15T11:54:25.032530Z",
      "start_time": "2020-07-15T11:54:18.959323Z"
     },
-    "code_folding": [],
-    "hidden": true
+    "code_folding": []
    },
    "outputs": [
     {
@@ -1493,9 +1474,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### **4.1.3. Variaveis Categoricas**"
    ]
@@ -1508,8 +1487,7 @@
      "end_time": "2020-07-15T11:54:44.495574Z",
      "start_time": "2020-07-15T11:54:25.045929Z"
     },
-    "code_folding": [],
-    "hidden": true
+    "code_folding": []
    },
    "outputs": [
     {
@@ -1573,9 +1551,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## **4.2 Analise Bivariada**"
    ]
@@ -1583,8 +1559,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### **H1.** Lojas com maior sortimento deveriam vender mais.\n",
@@ -1654,8 +1629,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### **H2.** Lojas com competidores mais próximos vendem menos.\n",
@@ -1718,8 +1692,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### **H3.** Lojas com competidores a mais tempo vendem mais \n",
@@ -1777,8 +1750,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### **H4.** Lojas com promoções ativas por mais tempo deveriam vender mais.\n",
@@ -1854,8 +1826,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### <s> **H5.** Lojas com mais dias de promoção deveriam vender mais</s>"
@@ -1864,8 +1835,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### **H6.** Lojas com promoções consecutivas vendem mais \n",
@@ -1989,8 +1959,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### **H7.** Lojas abertas durante o feriado de natal deveriam vender mais. \n",
@@ -2043,8 +2012,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### **H8.** Lojas deveriam vender mais ao longo dos anos \n",
@@ -2088,8 +2056,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### **H9.** Lojas deveriam vender mais no segundo semestre do ano\n",
@@ -2142,8 +2109,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### **H10.** Lojas deveriam vender mais depois do dia 10 de cada mês \n",
@@ -2202,8 +2168,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### **H11.** Lojas deveriam vender menos ao finais de semana \n",
@@ -2258,8 +2223,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### **H12.** Lojas deveriam vender menos durante os feriados escolares\n",
@@ -2304,8 +2268,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### **4.1.2. Resumo das Hipoteses**"
@@ -2378,18 +2341,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## **4.3. Analise Multivariada**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### **4.3.1. Atributos Numericos**"
    ]
@@ -2401,8 +2360,7 @@
     "ExecuteTime": {
      "end_time": "2020-07-15T11:55:16.951910Z",
      "start_time": "2020-07-15T11:55:15.117477Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -2423,9 +2381,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### **4.3.2. Atributos Categoricos**"
    ]
@@ -2437,8 +2393,7 @@
     "ExecuteTime": {
      "end_time": "2020-07-15T11:55:17.022214Z",
      "start_time": "2020-07-15T11:55:16.954002Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -2452,8 +2407,7 @@
     "ExecuteTime": {
      "end_time": "2020-07-15T11:55:18.207140Z",
      "start_time": "2020-07-15T11:55:17.029677Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -2482,8 +2436,7 @@
     "ExecuteTime": {
      "end_time": "2020-07-15T11:55:18.227798Z",
      "start_time": "2020-07-15T11:55:18.215523Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
